; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/md/extr_dm-thin-metadata.c_dm_pool_get_data_block_size.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/md/extr_dm-thin-metadata.c_dm_pool_get_data_block_size.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dm_pool_metadata = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @dm_pool_get_data_block_size(%struct.dm_pool_metadata* %0, i32* %1) #0 {
  %3 = alloca %struct.dm_pool_metadata*, align 8
  %4 = alloca i32*, align 8
  store %struct.dm_pool_metadata* %0, %struct.dm_pool_metadata** %3, align 8
  store i32* %1, i32** %4, align 8
  %5 = load %struct.dm_pool_metadata*, %struct.dm_pool_metadata** %3, align 8
  %6 = getelementptr inbounds %struct.dm_pool_metadata, %struct.dm_pool_metadata* %5, i32 0, i32 0
  %7 = call i32 @down_read(i32* %6)
  %8 = load %struct.dm_pool_metadata*, %struct.dm_pool_metadata** %3, align 8
  %9 = getelementptr inbounds %struct.dm_pool_metadata, %struct.dm_pool_metadata* %8, i32 0, i32 1
  %10 = load i32, i32* %9, align 4
  %11 = load i32*, i32** %4, align 8
  store i32 %10, i32* %11, align 4
  %12 = load %struct.dm_pool_metadata*, %struct.dm_pool_metadata** %3, align 8
  %13 = getelementptr inbounds %struct.dm_pool_metadata, %struct.dm_pool_metadata* %12, i32 0, i32 0
  %14 = call i32 @up_read(i32* %13)
  ret i32 0
}

declare dso_local i32 @down_read(i32*) #1

declare dso_local i32 @up_read(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
